--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=BioRhyme:wght@300&family=Oxygen&family=Oxygen+Mono&family=Roboto:wght@300&display=swap");
 /* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
 :root {
-  --black: #171321;
-  --dkblue: #0d314b;
-  --plum: #4b0d49;
-  --hotmag: #ff17e4;
-  --magenta: #e310cb;
-  --aqua: #86fbfb;
+  --black: #161220;
+  --dkblue: #0a202f;
+  --plum: #588edf;
+  --hotmag: #c08dfa;
+  --magenta: #65399f;
+  --aqua: #ab41dc;
   --white: #f7f8fa;
   --font-size: 1.3rem;
   --mono: "Oxygen mono", monospace;
@@ -30,6 +30,11 @@ body {
   font-size: var(--font-size);
 }
 
+/* img {
+  width: 500px;
+  border-radius: 10px;
+} */
+
 h1,
 h2,
 h3 {
@@ -45,11 +50,18 @@ a:hover {
   text-decoration: none;
 }
 
+img {
+  width: 100%;
+}
+
 /* Intro Styles */
 
 #intro {
-  padding-bottom: 10rem;
+  padding: 4rem 1rem 10rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
+
 #intro p {
   font-size: 1rem;
   line-height: 1.5;
@@ -70,8 +82,26 @@ a:hover {
   font-weight: normal;
 }
 
-#contact {
+/* background color divs */
+
+.gradient {
+  background: linear-gradient(
+    86deg,
+    rgba(175, 95, 231, 1) 0%,
+    rgba(65, 183, 244, 1) 100%
+  );
+  height: 2px;
+}
+
+.section-plum {
   background-color: var(--plum);
+}
+
+.section-dkblue {
+  background-color: var(--dkblue);
+}
+
+#contact {
   text-align: center;
   width: 400px;
   margin: 0 auto;
@@ -133,6 +163,9 @@ nav a:hover {
   background-color: var(--magenta);
   padding: 0.5rem;
   border-radius: 5px;
+  color: var(--white);
+  font-family: var(--mono);
+  text-decoration: none;
 }
 
 .button:hover {
@@ -142,6 +175,7 @@ nav a:hover {
 
 footer {
   text-align: center;
+  padding: 4rem 0;
 }
 
 footer ul {
@@ -154,6 +188,79 @@ footer ul {
   align-items: center;
   gap: 3rem;
   font-size: 3rem;
+}
+/* Projects section */
+#projects {
+  padding: 4rem 1rem;
+}
+
+#projects h2 {
+  font-size: 2.5rem;
+  margin-bottom: calc(2.5rem * 1.5);
+}
+
+#projects h3 {
+  color: var(--aqua);
+}
+
+#projects h4 {
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
+}
+
+.blackbox {
+  background-color: var(--black);
+  padding: 1rem;
+  border-radius: 10px;
+  color: var(--white);
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+#projects ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: 1rem;
+  font-size: 1rem;
+}
+
+#projects img {
+  margin: 2rem 0 4rem 0;
+  border-left: 1px solid var(--aqua);
+  border-top: 1px solid var(--aqua);
+  /* width: 450px; */
+  border-radius: 25px;
+  padding: 1rem;
+}
+
+@media (min-width: 800px) {
+  article {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 1rem;
+  }
+  #projects {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  #projects img {
+    grid-column: 1/6;
+    grid-row: 1/2;
+  }
+  .text {
+    order: 2;
+    text-align: right;
+    grid-column: 5/11;
+    grid-row: 1/2;
+  }
+  #projects ul {
+    justify-content: flex-end;
+  }
 }
 
 @media (min-width: 850px) {
