--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=BioRhyme:wght@300&family=Oxygen&family=Oxygen+Mono&family=Roboto:wght@300&display=swap");
 /* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
 :root {
-  --black: #161220;
-  --dkblue: #0a202f;
+  --black: #262527;
+  /* --dkblue: #24b039;
   --plum: #588edf;
   --hotmag: #c08dfa;
-  --magenta: #65399f;
-  --aqua: #ab41dc;
+  --magenta: #3a9359;
+  --aqua: #778e00; */
+  --dkblue: #1c2533;
+  --plum: #516667;
+  --hotmag: #457b9d;
+  --magenta: #e63946;
+  --aqua: #e63946;
   --white: #f7f8fa;
   --font-size: 1.3rem;
   --mono: "Oxygen mono", monospace;
@@ -85,11 +90,7 @@ img {
 /* background color divs */
 
 .gradient {
-  background: linear-gradient(
-    86deg,
-    rgba(175, 95, 231, 1) 0%,
-    rgba(65, 183, 244, 1) 100%
-  );
+  background: linear-gradient(86deg, #e63946 0%, #f1faee 100%);
   height: 2px;
 }
 
