--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@
   --hotmag: #c08dfa;
   --magenta: #3a9359;
   --aqua: #778e00; */
-  --dkblue: #1c2533;
-  --plum: #516667;
-  --hotmag: #457b9d;
-  --magenta: #e63946;
-  --aqua: #e63946;
+  --dkblue: #464648;
+  --plum: #404a59;
+  --hotmag: #a9d7f6;
+  --magenta: #8563bb;
+  --aqua: #a470e4;
   --white: #f7f8fa;
   --font-size: 1.3rem;
   --mono: "Oxygen mono", monospace;
@@ -90,7 +90,7 @@ img {
 /* background color divs */
 
 .gradient {
-  background: linear-gradient(86deg, #e63946 0%, #f1faee 100%);
+  background: linear-gradient(86deg, #62418c 0%, #f1faee 100%);
   height: 2px;
 }
 
@@ -99,7 +99,9 @@ img {
 }
 
 .section-dkblue {
-  background-color: var(--dkblue);
+  /* background-color: var(--dkblue);
+   */
+   background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
 }
 
 #contact {
